# oversight-arena

./: .gitignore  AGENTS.md  Dockerfile  HACKATHON.md  PLANS.md  README.md  openenv.yaml  pyproject.toml
scripts/: demo.py  evaluate.py
server/: __init__.py  app.py
skills/python-env-hardening/: SKILL.md
src/oversight_arena/: __init__.py  baseline.py  data_generator.py  demo.py  environment.py  evaluation.py  grader.py  inference.py  models.py  parser.py  prompt_builder.py  train.py
src/oversight_arena/adapters/: __init__.py  openai_adapter.py
src/oversight_arena/server/: __init__.py  app.py  launcher.py  session_store.py
tests/: test_baseline.py  test_environment.py  test_evaluation.py  test_generator.py  test_grader.py  test_inference.py  test_models.py  test_openai_adapter.py  test_parser.py  test_prompt_builder.py  test_scripts.py  test_server.py  test_train.py
