[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "oversight-arena"
version = "0.1.0"
description = "OpenEnv-compatible reinforcement-learning environment for oversight review tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "openenv-core>=0.2.0,<0.3",
    "pydantic>=2.7,<3",
    "uvicorn>=0.30,<1",
]

[project.scripts]
server = "oversight_arena.server.launcher:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8,<9",
]
openai = [
    "openai>=2.30,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["src/oversight_arena", "server"]
